# open-mobile-cli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  omcli-skill.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
ios/: Info.plist
ios/omcli/: ContentView.swift  OmcliApp.swift
ios/omcli.xcodeproj/: project.pbxproj
ios/omcli/AppIcon.icon/: icon.json
ios/omcli/Models/: Protocol.swift
ios/omcli/Services/: AlarmService.swift  CallService.swift  CameraService.swift  CommandRouter.swift  KeychainService.swift  LocationService.swift  NotificationService.swift  ServerDiscoveryService.swift  SleepService.swift  TTSService.swift  WebSocketService.swift
ios/omcli/Views/: AlarmView.swift  CameraPreviewView.swift  DashboardView.swift  OnboardingView.swift  PairingView.swift  QRScannerView.swift  SettingsView.swift  SleepModeView.swift
protocol/: PROTOCOL.md
skill/: SKILL.md
skill/references/: REFERENCE.md
src/: config.rs  lib.rs  main.rs
src/cli/: alarm.rs  camera.rs  config_cmd.rs  devices.rs  locate.rs  mod.rs  notify.rs  pair.rs  sleep.rs  status.rs
src/protocol/: mod.rs
src/relay/: api.rs  mod.rs  rate_limit.rs
src/server/: api.rs  apns.rs  auth.rs  mod.rs  state.rs  ws_client.rs  ws_device.rs
