[package]
name = "omcli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omcli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
dirs = "5"
mdns-sd = { version = "0.11", features = ["async"] }
hostname = "0.4"
a2 = "0.10"
base64 = "0.22"
